hard-gists/809993/run.log
=== Docker Run Log for 809993 ===
Started at: Mi 29. Okt 17:38:43 CET 2025

[2025-10-29 17:38:44] START: Running container for 809993
[2025-10-29 17:38:44] SUCCESS: Container c50ea7f1d79b005bf9672d4398a212cf9565d80bf33ec360f2c772dd2dab9827 started for 809993
=== Container logs for 809993 ===
  File "/snippet.py", line 12
    print field.to_class
    ^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 809993 ===
[2025-10-29 17:38:46] INFO: Container c50ea7f1d79b005bf9672d4398a212cf9565d80bf33ec360f2c772dd2dab9827 has stopped
